Sep 14, 2021
  refactor loader to simplify code and use java streams

Jul 26, 2021
  parser: treats all files as UTF-8-encoded
    (previously most files were considered ISO-8859-1 encoded, and some UTF-8 encoded;
     that resulted in garbled characters being loaded, because now everybody is using UTF-8 encoding)

Jul 21, 2021
  loader: added removal of cyclic relationship for UBERON

Jun 18, 2021
  TermStatsLoaderWithFilter: fixed handling of species list (verver, molerat were missing)

Apr 29, 2021
  tuned up OBO validation script

Feb 4, 2021
  fixed OBO validation script

Jan 27, 2021
  CL,MI,SO,UBERON ontologies: updated sources (files for these ontologies did not change for 9+ months)
  security: the value of api key is now stored in an external property file api.key (not in the code)

Jan 13, 2021
  obo exporter fix: added escaping of double quote characters in term definitions
  DO loader: fixed loading of definition dbxrefs
  scripts: added script to validate OBO files against OBO spec

Dec 22, 2020
  DO QC: improved handling of xref synonyms

Aug 10, 2020
  fixed script run_stats_update_only.sh

Jul 24, 2020
  DO QC loader: better code to load definition xrefs

Jul 06, 2020
  gviewer stats: simplified code; only processing ontologies without cycles

Jul 03, 2020
  obo file creator: updated code to export term def xrefs

Jul 02, 2020
  parser: updated code to load term def xrefs

Jun 08, 2020
  obo generator: improved summary email

Apr 24, 2020
  term stats loader with filter: added calculation of term stats for cell lines

Apr 23, 2020
  term stats loader: added calculation of term stats for cell lines

Apr 15, 2020
  parser: for GO, fixed generation of Not4Curation synonyms

Apr 07, 2020
  obo-generator: vastly improved summary email

Mar 16, 2020
  gviewer stats loader: fix due to changes in rgdcore regarding primaray ref assemblies

Mar 06, 2020
  DO loader: added parsing of broad synonyms

Feb 28, 2020