@@ -204,6 +204,7 @@ public class FileParser {
         String line, val;
         Record rec = null;
         while( (line=reader.readLine())!=null ) {
+
             // detect term boundary
             if( line.startsWith("[") ) {
                 // write the current record into queue for further processing
@@ -648,7 +649,6 @@ public class FileParser {
         Relation rel = relations.get(relName);
         if( rel==null ) {
             rel = Relation.NOT_SPECIFIED;
-            handleUnexpectedRelation(line);
         }
 
         // term acc id for the relation is between 1st and 2nd space
@@ -665,6 +665,9 @@ public class FileParser {
         }
         else {
             addRelationship(rec, accId2, rel, ontId);
+            if( rel.equals(Relation.NOT_SPECIFIED) ) {
+                handleUnexpectedRelation(line);
+            }
         }
     }
 
@@ -792,9 +795,13 @@ public class FileParser {
             Record.addCyclicRelationship("CC", "has_part");
             Record.addCyclicRelationship("MF", "has_part");
         }
-
+        else
         if( ontId.equals("EFO") ) {
             Record.addCyclicRelationship("EFO", "EFO:0006351"); // has_about_it
+        }
+        else
+        if( ontId.equals("UBERON") ) {
+            Record.addCyclicRelationship("UBERON", "mutually_spatially_disjoint_with");
         }
     }
 
