@@ -1,3 +1,6 @@
+Dec 20, 2021
+  parser: UBERON ontology: 'mutually_spacially_disjoint_with' relationship loaded as synonyms to avoid cycles
+
 Sep 14, 2021
   refactor loader to simplify code and use java streams
 
